SysY/SysYParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ./SysY.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class SysYParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SingleLineComment=1, MultiLineComment=2, Identifier=3, Assign=4, Plus=5, 
		Minus=6, Multiply=7, Divide=8, Mod=9, AndAnd=10, OrOr=11, Not=12, Equal=13, 
		NotEqual=14, Less=15, Greater=16, LessEqual=17, GreaterEqual=18, LeftParenthesis=19, 
		RightParenthesis=20, LeftBracket=21, RightBracket=22, LeftBrace=23, RightBrace=24, 
		Int=25, Float=26, Void=27, Const=28, Break=29, Continue=30, Return=31, 
		If=32, Else=33, While=34, Comma=35, Semicolon=36, Constant=37, DigitSequence=38;
	public const int
		RULE_compilationUnit = 0, RULE_declaration = 1, RULE_bType = 2, RULE_constantDeclaration = 3, 
		RULE_constDefinition = 4, RULE_constInitValue = 5, RULE_variableDeclaration = 6, 
		RULE_variableDefinition = 7, RULE_initialValue = 8, RULE_functionDefinition = 9, 
		RULE_functionType = 10, RULE_parameterDeclaration = 11, RULE_block = 12, 
		RULE_blockItem = 13, RULE_statement = 14, RULE_expression = 15, RULE_leftValue = 16, 
		RULE_primaryExpression = 17, RULE_unaryExpression = 18, RULE_multiplicativeExpression = 19, 
		RULE_additiveExpression = 20, RULE_relationalExpression = 21, RULE_equalityExpression = 22, 
		RULE_logicalAndExpression = 23, RULE_logicalOrExpression = 24, RULE_constExpression = 25;
	public static readonly string[] ruleNames = {
		"compilationUnit", "declaration", "bType", "constantDeclaration", "constDefinition", 
		"constInitValue", "variableDeclaration", "variableDefinition", "initialValue", 
		"functionDefinition", "functionType", "parameterDeclaration", "block", 
		"blockItem", "statement", "expression", "leftValue", "primaryExpression", 
		"unaryExpression", "multiplicativeExpression", "additiveExpression", "relationalExpression", 
		"equalityExpression", "logicalAndExpression", "logicalOrExpression", "constExpression"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'&&'", 
		"'||'", "'!'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", "'('", "')'", 
		"'['", "']'", "'{'", "'}'", "'int'", "'float'", "'void'", "'const'", "'break'", 
		"'continue'", "'return'", "'if'", "'else'", "'while'", "','", "';'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SingleLineComment", "MultiLineComment", "Identifier", "Assign", 
		"Plus", "Minus", "Multiply", "Divide", "Mod", "AndAnd", "OrOr", "Not", 
		"Equal", "NotEqual", "Less", "Greater", "LessEqual", "GreaterEqual", "LeftParenthesis", 
		"RightParenthesis", "LeftBracket", "RightBracket", "LeftBrace", "RightBrace", 
		"Int", "Float", "Void", "Const", "Break", "Continue", "Return", "If", 
		"Else", "While", "Comma", "Semicolon", "Constant", "DigitSequence"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SysY.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static SysYParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SysYParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SysYParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class CompilationUnitContext : ParserRuleContext {
		public DeclarationContext _declaration;
		public IList<DeclarationContext> _globalValues = new List<DeclarationContext>();
		public FunctionDefinitionContext _functionDefinition;
		public IList<FunctionDefinitionContext> _functions = new List<FunctionDefinitionContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(SysYParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext[] declaration() {
			return GetRuleContexts<DeclarationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DeclarationContext declaration(int i) {
			return GetRuleContext<DeclarationContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefinitionContext[] functionDefinition() {
			return GetRuleContexts<FunctionDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionDefinitionContext functionDefinition(int i) {
			return GetRuleContext<FunctionDefinitionContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(Context, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				State = 54;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 52;
					_localctx._declaration = declaration();
					_localctx._globalValues.Add(_localctx._declaration);
					}
					break;
				case 2:
					{
					State = 53;
					_localctx._functionDefinition = functionDefinition();
					_localctx._functions.Add(_localctx._functionDefinition);
					}
					break;
				}
				}
				State = 56;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 503316480L) != 0) );
			State = 58;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public VariableDeclarationContext variableDeclaration() {
			return GetRuleContext<VariableDeclarationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstantDeclarationContext constantDeclaration() {
			return GetRuleContext<ConstantDeclarationContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 2, RULE_declaration);
		try {
			State = 62;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Int:
			case Float:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60;
				variableDeclaration();
				}
				break;
			case Const:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61;
				constantDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BTypeContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Int() { return GetToken(SysYParser.Int, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Float() { return GetToken(SysYParser.Float, 0); }
		public BTypeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bType; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterBType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitBType(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBType(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BTypeContext bType() {
		BTypeContext _localctx = new BTypeContext(Context, State);
		EnterRule(_localctx, 4, RULE_bType);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			_la = TokenStream.LA(1);
			if ( !(_la==Int || _la==Float) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstantDeclarationContext : ParserRuleContext {
		public ConstDefinitionContext _constDefinition;
		public IList<ConstDefinitionContext> _constants = new List<ConstDefinitionContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Const() { return GetToken(SysYParser.Const, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public BTypeContext bType() {
			return GetRuleContext<BTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(SysYParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstDefinitionContext[] constDefinition() {
			return GetRuleContexts<ConstDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstDefinitionContext constDefinition(int i) {
			return GetRuleContext<ConstDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(SysYParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(SysYParser.Comma, i);
		}
		public ConstantDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constantDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterConstantDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitConstantDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstantDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstantDeclarationContext constantDeclaration() {
		ConstantDeclarationContext _localctx = new ConstantDeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_constantDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			Match(Const);
			State = 67;
			bType();
			State = 68;
			_localctx._constDefinition = constDefinition();
			_localctx._constants.Add(_localctx._constDefinition);
			State = 73;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 69;
				Match(Comma);
				State = 70;
				_localctx._constDefinition = constDefinition();
				_localctx._constants.Add(_localctx._constDefinition);
				}
				}
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 76;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstDefinitionContext : ParserRuleContext {
		public ConstExpressionContext _constExpression;
		public IList<ConstExpressionContext> _dimensions = new List<ConstExpressionContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Identifier() { return GetToken(SysYParser.Identifier, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Assign() { return GetToken(SysYParser.Assign, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstInitValueContext constInitValue() {
			return GetRuleContext<ConstInitValueContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(SysYParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LeftBracket() { return GetTokens(SysYParser.LeftBracket); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBracket(int i) {
			return GetToken(SysYParser.LeftBracket, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RightBracket() { return GetTokens(SysYParser.RightBracket); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBracket(int i) {
			return GetToken(SysYParser.RightBracket, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstExpressionContext[] constExpression() {
			return GetRuleContexts<ConstExpressionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstExpressionContext constExpression(int i) {
			return GetRuleContext<ConstExpressionContext>(i);
		}
		public ConstDefinitionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constDefinition; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterConstDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitConstDefinition(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstDefinition(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstDefinitionContext constDefinition() {
		ConstDefinitionContext _localctx = new ConstDefinitionContext(Context, State);
		EnterRule(_localctx, 8, RULE_constDefinition);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			Match(Identifier);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LeftBracket) {
				{
				{
				State = 79;
				Match(LeftBracket);
				State = 80;
				_localctx._constExpression = constExpression();
				_localctx._dimensions.Add(_localctx._constExpression);
				State = 81;
				Match(RightBracket);
				}
				}
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 88;
			Match(Assign);
			State = 89;
			constInitValue();
			State = 90;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstInitValueContext : ParserRuleContext {
		public ConstInitValueContext _constInitValue;
		public IList<ConstInitValueContext> _elements = new List<ConstInitValueContext>();
		[System.Diagnostics.DebuggerNonUserCode] public ConstExpressionContext constExpression() {
			return GetRuleContext<ConstExpressionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LeftBrace() { return GetToken(SysYParser.LeftBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RightBrace() { return GetToken(SysYParser.RightBrace, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConstInitValueContext[] constInitValue() {
			return GetRuleContexts<ConstInitValueContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ConstInitValueContext constInitValue(int i) {
			return GetRuleContext<ConstInitValueContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(SysYParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(SysYParser.Comma, i);
		}
		public ConstInitValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constInitValue; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterConstInitValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitConstInitValue(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConstInitValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConstInitValueContext constInitValue() {
		ConstInitValueContext _localctx = new ConstInitValueContext(Context, State);
		EnterRule(_localctx, 10, RULE_constInitValue);
		int _la;
		try {
			State = 105;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Identifier:
			case Plus:
			case Minus:
			case Not:
			case LeftParenthesis:
			case Constant:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92;
				constExpression();
				}
				break;
			case LeftBrace:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93;
				Match(LeftBrace);
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 137447870568L) != 0)) {
					{
					State = 94;
					_localctx._constInitValue = constInitValue();
					_localctx._elements.Add(_localctx._constInitValue);
					State = 99;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==Comma) {
						{
						{
						State = 95;
						Match(Comma);
						State = 96;
						_localctx._constInitValue = constInitValue();
						_localctx._elements.Add(_localctx._constInitValue);
						}
						}
						State = 101;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					}
				}

				State = 104;
				Match(RightBrace);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VariableDeclarationContext : ParserRuleContext {
		public VariableDefinitionContext _variableDefinition;
		public IList<VariableDefinitionContext> _variables = new List<VariableDefinitionContext>();
		[System.Diagnostics.DebuggerNonUserCode] public BTypeContext bType() {
			return GetRuleContext<BTypeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Semicolon() { return GetToken(SysYParser.Semicolon, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public VariableDefinitionContext[] variableDefinition() {
			return GetRuleContexts<VariableDefinitionContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableDefinitionContext variableDefinition(int i) {
			return GetRuleContext<VariableDefinitionContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] Comma() { return GetTokens(SysYParser.Comma); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Comma(int i) {
			return GetToken(SysYParser.Comma, i);
		}
		public VariableDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_variableDeclaration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.EnterVariableDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ISysYListener typedListener = listener as ISysYListener;
			if (typedListener != null) typedListener.ExitVariableDeclaration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ISysYVisitor<TResult> typedVisitor = visitor as ISysYVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVariableDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VariableDeclarationContext variableDeclaration() {
		VariableDeclarationContext _localctx = new VariableDeclarationContext(Context, State);
		EnterRule(_localctx, 12, RULE_variableDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 107;
			bType();
			State = 108;
			_localctx._variableDefinition = variableDefinition();
			_localctx._variables.Add(_localctx._variableDefinition);
			State = 113;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Comma) {
				{
				{
				State = 109;
				Match(Comma);
				State = 110;
				_localctx._variableDefinition = variableDefinition();
				_localctx._variables.Add(_localctx._variableDefinition);
				}
				}
				State = 115;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 116;
			Match(Semicolon);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
